# codesentinel-ai

./: .env.example  .gitignore  LICENSE  Launch_CodeSentinel.command  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.sh
cli/: __init__.py  main.py  rich_render.py
codesentinel/: __init__.py  config.py  languages.py  schema.py
codesentinel/analyzers/: __init__.py  bandit_runner.py  base.py  eslint_runner.py  ruff_runner.py
codesentinel/llm/: __init__.py  client.py  parser.py  prompts.py
codesentinel/reporting/: __init__.py  json_report.py  markdown.py  sarif.py
codesentinel/review/: __init__.py  chunker.py  engine.py  git_diff.py  merger.py
codesentinel/utils/: doctor.py  files.py  logging.py
deploy/: Dockerfile.web  README.md
docs/: 01_report.md  02_requirements.md  03_architecture.md  04_model_card.md  05_prompt_engineering.md  06_testing.md  07_results.md  08_limitations.md  09_future_work.md  10_presentation_script.md  11_run_book.md  CodeSentinel_Documentation_EN.docx  CodeSentinel_Final_Report.docx  CodeSentinel_Presentacion.pptx  PROJECT_DOCUMENTATION_EN.md
docs/diagrams/: architecture.mmd  sequence_review.mmd
examples/: buggy_python.py  insecure_js.js  legacy_java.java  messy_typescript.ts
tests/: conftest.py  test_chunker.py  test_cli.py  test_client.py  test_engine.py  test_engine_dir.py  test_git_diff.py  test_languages.py  test_merger.py  test_parser.py  test_prompts.py  test_reporting.py  test_schema.py
web/: __init__.py  app.py  components.py  desktop.py
web/assets/: styles.css
