[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codesentinel"
version = "0.1.0"
description = "Local AI Code Reviewer powered by Qwen2.5-Coder and Ollama"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Linda Valentina Lopez Rubiano" },
    { name = "Juan Felipe Andrade" },
]
keywords = ["code-review", "ai", "llm", "ollama", "qwen", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
codesentinel = "cli.main:app"
cs = "cli.main:app"

[project.urls]
Homepage = "https://github.com/lindavlr/codesentinel-ai"

[tool.setuptools]
packages = ["codesentinel", "codesentinel.llm", "codesentinel.analyzers", "codesentinel.review", "codesentinel.reporting", "codesentinel.utils", "cli", "web"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
# E501: long lines (we use 100-char soft limit)
# B008: function call in default — idiomatic for Typer's Argument()/Option() and FastAPI's Depends()
# UP042: StrEnum requires 3.11+ minimum, but (str, Enum) is the broadly compatible idiom
ignore = ["E501", "B008", "UP042"]

[tool.ruff.lint.per-file-ignores]
"cli/main.py" = ["B008"]
"examples/*" = ["ALL"]

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
